--- a/prs/imageGen.html
+++ b/prs/imageGen.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Minimal AI Studio | zImage</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -13,7 +13,8 @@
             font-family: 'Roboto', sans-serif;
             background-color: #050505;
             color: #ffffff;
-            height: 100vh;
+            /* Alterado de 100vh para 100dvh para melhor suporte mobile */
+            height: 100dvh;
             width: 100vw;
             display: flex;
             flex-direction: column;
